@@ -9,9 +9,13 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.hateoas.CollectionModel;
 import org.springframework.hateoas.EntityModel;
 import org.springframework.hateoas.server.RepresentationModelAssembler;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
@@ -23,20 +27,42 @@ public class UserModelAssembler implements RepresentationModelAssembler <UserRes
 
     @Override
     public EntityModel<UserResponseDTO> toModel(UserResponseDTO user) {
-        return EntityModel.of(user,
-                linkTo(methodOn(UserController.class).getUserByIdPublic(user.getId())).withSelfRel(),
-                linkTo(methodOn(UserController.class).getAllUsers(PageRequest.of(0, 10))).withRel("all-users")
-        );
+        EntityModel<UserResponseDTO> model = EntityModel.of(user);
+        Set<String> permisos = getAuthorities();
+
+        if (permisos.contains("VER_PERFIL")) {
+            model.add(linkTo(methodOn(UserController.class).getUserByIdPublic(user.getId())).withSelfRel());
+        }
+
+        if (permisos.contains("VER_TODOS_USUARIOS")) {
+            model.add(linkTo(methodOn(UserController.class).getAllUsers(PageRequest.of(0, 10))).withRel("all-users"));
+        }
+
+        return model;
     }
 
     @Override
     public CollectionModel<EntityModel<UserResponseDTO>> toCollectionModel(Iterable<? extends UserResponseDTO> users) {
-        var userModels = StreamSupport.stream(users.spliterator(), false)
+        List<EntityModel<UserResponseDTO>> userModels = ((List<UserResponseDTO>) users).stream()
                 .map(this::toModel)
-                .collect(Collectors.toList());
+                .toList();
 
-        return CollectionModel.of(userModels,
-                linkTo(methodOn(UserController.class).getAllUsers(PageRequest.of(0, 10))).withSelfRel()
-        );
+        CollectionModel<EntityModel<UserResponseDTO>> collection = CollectionModel.of(userModels);
+        Set<String> permisos = getAuthorities();
+
+        if (permisos.contains("VER_TODOS_USUARIOS")) {
+            collection.add(linkTo(methodOn(UserController.class).getAllUsers(PageRequest.of(0, 10))).withSelfRel());
+        }
+
+        return collection;
     }
+
+    private Set<String> getAuthorities() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication == null || authentication.getAuthorities() == null) return Set.of();
+        return authentication.getAuthorities().stream()
+                .map(GrantedAuthority::getAuthority)
+                .collect(Collectors.toSet());
+    }
+
 }
